
* Fix `paste.httpserver` to allow binding to port 0.

* In ``paste.auth.auth_tkt``, set the same cookies (with the same
  domains) in ``set_cookie`` as get unset in ``logout_user_cookie``.

* In ``paste.translogger`` save REQUEST_METHOD in case it gets
  overridden somewhere (e.g., when using errordocuments POST would
  show up as GET).

1.6.1
-----

* Fixed bug in paste lint where PATH_INFO would become unicode.

1.6
---

* Make the import of ``socket.sslerror`` conditional in
  ``paste.exceptions.reporter`` (needed for Python interpreters
  compiled without SSL support).

* In ``paste.proxy.TransparentProxy``, don't overwrite
  ``X-Forwarded-For`` header if it is already in the environment.

* Added ``226 IM Used`` status code to ``paste.wsgiwrappers``

* In ``paste.fixture.TestApp`` treat ``<image type="image">`` the same
  as a submit button.

* Use ``OpenSSL.tsafe.Connection`` for https with
  ``paste.httpserver``, avoiding some possible errors (``sslv3 alert
  bad record mac``).

* Fix small issue with ``paste.cgiapp`` and mod_wsgi.

* Use ``BaseCookie`` instead of ``SimpleCookie`` for storing cookies
  (avoids quoting cookie values).

1.5.1
-----

* Make ``paste.cascade`` more tolerant of a missing or invalid
  Content-Length.

1.5
---

* Fixed memory leak with ``paste.registry`` not properly removing
  all references to registered objects should register be called
  multiple times during a single context for a StackedObjectProxy.

* ``paste.httpheaders.CONTENT_RANGE`` returns ``bytes
  START-END/LENGTH`` instead of just ``START-END/LENGTH``

* In ``paste.fixture.TestApp`` set ``CONTENT_TYPE`` to
  ``'application/x-www-form-urlencoded'`` whenever there are
  parameters (and no other content type was provided).

* In ``paste.session``, when cleaning files ignore files that aren't
  session files.

* ``paste.httpexceptions.HTTPExceptionHandler`` will no longer catch
  exceptions raised during the app_iter iteration.
